import React from 'react';
import { render, screen, fireEvent } from '@testing-library/react';
import Context from 'fusion:context';
import Content from 'fusion:content';
import Share from '../../../../../../components/features/LN-nota/share/default';
import getToken from '../../../../../../components/private/common/utils/getToken';
import toggleBookmark from '../../../../../../components/private/common/utils/bookmarkHelper';
import useCheckBookmark from '../../../../../../components/private/common/hooks/bookmark/useCheckBookmark';
import useFetch from '../../../../../../components/private/common/hooks/useFetch';
import { addEventToDataLayerV2 } from '../../../../../../components/private/LN/common/utils/addEventToDataLayer';

jest.mock('fusion:context', Component => {
    return function(Component) {
        return props => <Component {...props} />;
    };
});

jest.mock('../../../../../../components/private/common/utils/getToken', () =>
    jest.fn()
);

jest.mock(
    '../../../../../../components/private/common/utils/bookmarkHelper',
    () => jest.fn()
);

jest.mock(
    '../../../../../../components/private/common/hooks/bookmark/useCheckBookmark',
    () => jest.fn()
);

jest.mock('../../../../../../components/private/common/hooks/useFetch', () =>
    jest.fn()
);

jest.mock(
    '../../../../../../components/private/LN/common/utils/addEventToDataLayer',
    () => ({
        __esModule: true,
        default: jest.fn(),
        addEventToDataLayerV2: jest.fn()
    })
);

const props = {
    outputType: 'default',
    arcSite: 'la-nacion-ar',
    globalContent: {
        _id: 'L47IICAOMVFW5MV343TJIHS4RY',
        headlines: {
            basic: 'title',
            mobile: 'mobileTitle'
        },
        comments: {
            display_comments: true
        },
        first_publish_date: 'firstPublishDate',
        subtype: '',
        promo_items: { glossary: {} }
    },
    requestUri: '/economia/dolar-hoy/',
    renderables: [
        {
            collection: 'features',
            type: 'LN-10/IA',
            props: {
                customFields: {
                    hideGlossary: false,
                    hideSummary: false
                }
            }
        }
    ]
};

Context.useAppContext = jest.fn(() => props);

Content.useContent = jest.fn(() => ({
    totalVisibleContent: '64'
}));

jest.mock('react', () => {
    const ActualReact = jest.requireActual('react');
    return {
        ...ActualReact,
        useContext: () => ({
            state: {
                loginData: {
                    subscription: true
                }
            },
            dispatch: jest.fn()
        })
    };
});

describe('components - private - LN - nota - share', () => {
    useFetch.mockImplementation(() => ({
        data: {}
    }));
    delete global.window.open;
    global.window = Object.create(window);
    global.window.open = jest.fn();
    global.window.FB = {
        init: jest.fn(),
        ui: jest.fn()
    };
    global.window.scrollTo = jest.fn();

    let component;

    beforeEach(() => {
        toggleBookmark.mockImplementation(() => 200);
        useCheckBookmark.mockImplementation(
            () => '2aa355fd-2679-4e54-b552-ea404096c323'
        );

        component = render(<Share />);
        global.window.dataLayer = [];
    });

    afterEach(() => {
        component = null;
    });

    test('Snapshot - Should show 11 buttons ', () => {
        const { container } = component;
        expect(screen.getAllByRole('button').length).toStrictEqual(11);
        expect(container).toMatchSnapshot();
    });

    test('Should scroll to the comments section. ', () => {
        const button = screen.getByRole('button', {
            name: 'Ir a los comentarios de la nota'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'ver_comentarios'
        });

        expect(window.scrollTo).toHaveBeenCalled();
    });

    test('Should open whatsapp in a new window and record the click on dataLayer', () => {
        const button = screen.getByRole('button', {
            name: 'Compartir la nota en WhatsApp'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'compartir_whatsapp'
        });
        expect(window.open).toHaveBeenCalled();
    });

    test('Should copy the url to the clipboard and record the click in dataLayer', () => {
        Object.assign(navigator, {
            clipboard: {
                writeText: jest.fn()
            }
        });
        const { container } = component;

        const button = screen.getByRole('button', {
            name: 'Copiar link de la nota'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'copiar_link'
        });
        expect(navigator.clipboard.writeText).toHaveBeenCalled();
        expect(
            container.querySelector('.mod-tooltip .com-text').innerHTML
        ).toStrictEqual('Copiado');
    });

    test('should open facebook in a new window and record the click on dataLayer', () => {
        const button = screen.getByRole('button', {
            name: 'Compartir la nota en Facebook'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'compartir_facebook'
        });
        expect(window.open).toHaveBeenCalled();
    });

    test('should open X (previously Twitter) in a new window and record the click on dataLayer', () => {
        const button = screen.getByRole('button', {
            name: 'Compartir la nota en X'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'compartir_x'
        });
        expect(window.open).toHaveBeenCalled();
    });

    test('should open E-mail in a new window and record the click on dataLayer', () => {
        const button = screen.getByRole('button', {
            name: 'Compartir la nota por E-mail'
        });

        expect(button).toBeTruthy();

        fireEvent.click(button);

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'enviar_mail'
        });
        expect(window.open).toHaveBeenCalled();
    });

    test('Test click button bookmark', () => {
        getToken.mockImplementation(
            () => '9B979333-C7F4-4F46-8EA8-8BBCBB3F14DF'
        );

        const { container } = component;
        const button = screen.getByRole('button', {
            name: 'Notas guardadas'
        });

        expect(button).toBeTruthy();
        expect(button.classList.contains('--is-saved')).toBeTruthy();

        button.click();

        expect(addEventToDataLayerV2).toHaveBeenCalledWith({
            event: 'e_linkclick',
            action: 'toolbard',
            category: 'nota_ln9',
            label: 'guardar_nota'
        });
        expect(useCheckBookmark).toHaveBeenCalled();
        expect(container).toMatchSnapshot();
    });
});

describe('Note display comment in false ', () => {
    beforeEach(() => {
        Context.useAppContext = jest.fn(() => ({
            ...props,
            globalContent: {
                ...props.globalContent,
                comments: {
                    display_comments: false
                }
            }
        }));
    });
    test('Matches snapshot when the note is not comments', () => {
        const { container } = render(<Share />);
        expect(screen.getAllByRole('button').length).toStrictEqual(10);
        expect(container).toMatchSnapshot();
    });
});
